# backtesting_engine

./: Cargo.toml
advanced/: Cargo.toml
advanced/src/: broker.rs  lib.rs  main.rs  market_data.rs  strategy.rs  types.rs
advanced/src/broker/: accounts.rs
advanced/src/strategy/: ema_strategy.rs
data/: apple_data.csv  apple_data_4h.csv
simple/: Cargo.toml
simple/src/: broker.rs  data_feed_tick.rs  lib.rs  main.rs  strategy.rs  types.rs
simple/src/strategy/: sma_strategy.rs
