[package]
name = "simple"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
dotenv = "0.15.0"
prost = "0.14.1"
reqwest = { version = "0.13.1", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
